added specs finally!

--- a/ios/Rakefile
+++ b/ios/Rakefile
@@ -8,4 +8,5 @@ Bundler.require
 Motion::Project::App.setup do |app|
   # Use `rake config' to see complete project settings.
   app.name = 'motion-firebase'
+  app.specs_dir = '../spec'
 end
